# SubstratePractise

./: README.md
node/: Cargo.toml
pallets/kitties/: Cargo.toml
pallets/kitties/src/: lib.rs  mock.rs  tests.rs
pallets/poe/: Cargo.toml
pallets/poe/src/: lib.rs  mock.rs  tests.rs
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
